Fix icon alignment

--- a/stylesheets/settings-view.less
+++ b/stylesheets/settings-view.less
@@ -137,7 +137,6 @@
 
   .section-heading.icon:before {
     margin-right: @component-padding;
-    vertical-align: top;
   }
 
   .section-heading-count {
